--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.example</groupId>
+			<artifactId>demo4</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
