--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,14 @@
 		<java.version>1.8</java.version>
 		<test1.version>1.2.3-SNAPSHOT</test1.version>
 		<test2.version>4.5.6-SNAPSHOT</test2.version>
+		<demo4.version>0.0.1-SNAPSHOT</demo4.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.example</groupId>
 			<artifactId>demo4</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${demo4.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
