--- a/.github/workflows/dispatch-handler-test2.yml
+++ b/.github/workflows/dispatch-handler-test2.yml
@@ -51,7 +51,7 @@ jobs:
         jfrog rt mvn build-helper:parse-version versions:set \
           -DprocessAllModules=false -DgenerateBackupPoms=false \
           -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}'
-        jfrot rt mvn versions:update-property \
+        jfrog rt mvn versions:update-property \
           -DgenerateBackupPoms=false -Dproperty=atest4.version -DnewVersion=${{ github.payload.client_payload.build_zoo_handler_context.properties.atest4_version}}
         echo ::set-output name=RELEASE_VERSION::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         cat pom.xml
