--- a/.github/workflows/dispatch-handler-test2.yml
+++ b/.github/workflows/dispatch-handler-test2.yml
@@ -1,12 +1,6 @@
 name: Dispatch Handler Test2
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'release version'
-        required: true
-        default: '0.0.0'
   repository_dispatch:
     types: [build-zoo-handler-build]
 
@@ -44,7 +38,6 @@ jobs:
           --repo-deploy-snapshots=libs-spring-dataflow-private-snapshot \
 
     # build
-    # jfrog rt mvn -U -B clean install
     - name: Build and Publish
       id: build
       run: |
@@ -53,8 +46,18 @@ jobs:
           -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}'
         jfrog rt mvn versions:set-property \
           -DgenerateBackupPoms=false -Dproperty=demo4.version -DnewVersion=${{ github.event.client_payload.build_zoo_handler_context.properties.atest4_version}}
+        jfrog rt mvn -U -B clean install
         echo ::set-output name=RELEASE_VERSION::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        cat pom.xml
+
+    # zoo tag
+    - name: Tag Release
+      uses: jvalkeal/build-zoo-handler@gh7-work1
+      with:
+        tag-release-username: 'github-actions[bot]'
+        tag-release-useremail: '41898282+github-actions[bot]@users.noreply.github.com'
+        tag-release-branch: ${{ steps.build.outputs.RELEASE_VERSION }}
+        tag-release-tag: ${{ steps.build.outputs.RELEASE_VERSION }}
+        tag-release-tag-prefix: v
 
     # zoo
     - name: Notify Build Zoo Handler Controller
