--- a/.github/workflows/dispatch-handler-test2.yml
+++ b/.github/workflows/dispatch-handler-test2.yml
@@ -9,11 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    # - name: Dump GitHub context
-    #   env:
-    #     GITHUB_CONTEXT: ${{ toJson(github) }}
-    #   run: echo "$GITHUB_CONTEXT"
-
     # base setup
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
@@ -37,6 +32,7 @@ jobs:
           --repo-deploy-releases=libs-spring-dataflow-private-release \
           --repo-deploy-snapshots=libs-spring-dataflow-private-snapshot \
 
+    # zoo extract and ensure
     - name: Extract Zoo Context Properties
       uses: jvalkeal/build-zoo-handler@gh7-work1
       with:
@@ -54,11 +50,7 @@ jobs:
         jfrog rt mvn versions:set-property \
           -DgenerateBackupPoms=false -Dproperty=demo4.version -DnewVersion=$BUILD_ZOO_HANDLER_atest4_version
         jfrog rt mvn -U -B clean install
-        echo ::set-output name=RELEASE_VERSION::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-
-    # -DgenerateBackupPoms=false -Dproperty=demo4.version -DnewVersion=${{ github.event.client_payload.build_zoo_handler_context.properties.atest4_version}}
-    # -DgenerateBackupPoms=false -Dproperty=demo4.version -DnewVersion=$BUILD_ZOO_HANDLER_atest4_version
-    # echo ::set-output name=BUILD_ZOO_HANDLER_atest3_version::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo ::set-env name=BUILD_ZOO_HANDLER_atest3_version::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
 
     # zoo tag
     - name: Tag Release
@@ -66,8 +58,8 @@ jobs:
       with:
         tag-release-username: 'github-actions[bot]'
         tag-release-useremail: '41898282+github-actions[bot]@users.noreply.github.com'
-        tag-release-branch: ${{ steps.build.outputs.RELEASE_VERSION }}
-        tag-release-tag: ${{ steps.build.outputs.RELEASE_VERSION }}
+        tag-release-branch: ${{ env.BUILD_ZOO_HANDLER_atest3_version }}
+        tag-release-tag: ${{ env.BUILD_ZOO_HANDLER_atest3_version }}
         tag-release-tag-prefix: v
 
     # zoo
@@ -80,9 +72,5 @@ jobs:
         dispatch-handler-event-type: build-zoo-handler-control
         dispatch-handler-client-payload-data: >
           {
-            "event": "build-succeed",
-            "prop41": "val41",
-            "properties": {
-              "atest3_version": "${{ steps.build.outputs.RELEASE_VERSION }}"
-            }
+            "event": "build-succeed"
           }
