--- a/.github/workflows/next-dev-version.yml
+++ b/.github/workflows/next-dev-version.yml
@@ -46,8 +46,8 @@ jobs:
         jfrog rt mvn build-helper:parse-version \
           versions:set \
           -DprocessAllModules=false -DgenerateBackupPoms=false \
-          -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.nextIncrementalVersion}-SNAPSHOT' \
-          versions:set-property \
+          -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.nextIncrementalVersion}-SNAPSHOT'
+        jfrog rt mvn versions:set-property \
           -DgenerateBackupPoms=false \
           -Dproperty=demo4.version \
           -DnewVersion=$BUILD_ZOO_HANDLER_atest4_version
