--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
 
     # zoo extract and ensure
     - name: Extract Zoo Context Properties
-      uses: jvalkeal/build-zoo-handler@v0.0.1
+      uses: jvalkeal/build-zoo-handler@gh11-work1
       with:
         dispatch-handler-extract-context-properties: true
         ensure-env: |
@@ -54,7 +54,7 @@ jobs:
 
     # zoo tag
     - name: Tag Release
-      uses: jvalkeal/build-zoo-handler@v0.0.1
+      uses: jvalkeal/build-zoo-handler@gh11-work1
       with:
         tag-release-username: 'github-actions[bot]'
         tag-release-useremail: '41898282+github-actions[bot]@users.noreply.github.com'
@@ -62,9 +62,9 @@ jobs:
         tag-release-tag: ${{ env.BUILD_ZOO_HANDLER_atest1_version }}
         tag-release-tag-prefix: v
 
-    # zoo
-    - name: Notify Build Zoo Handler Controller
-      uses: jvalkeal/build-zoo-handler@v0.0.1
+    # zoo success
+    - name: Notify Build Success Zoo Handler Controller
+      uses: jvalkeal/build-zoo-handler@gh11-work1
       with:
         dispatch-handler-token: ${{ secrets.REPO_ACCESS_TOKEN }}
         dispatch-handler-owner: jvalkeal
@@ -73,4 +73,18 @@ jobs:
         dispatch-handler-client-payload-data: >
           {
             "event": "release-succeed"
+          }
+
+    # zoo failure
+    - name: Notify Build Failure Zoo Handler Controller
+      if: ${{ failure() }}
+      uses: jvalkeal/build-zoo-handler@gh11-work1
+      with:
+        dispatch-handler-token: ${{ secrets.REPO_ACCESS_TOKEN }}
+        dispatch-handler-owner: jvalkeal
+        dispatch-handler-repo: atest1
+        dispatch-handler-event-type: build-zoo-handler-control-release
+        dispatch-handler-client-payload-data: >
+          {
+            "event": "release-failed"
           }
