--- a/.github/workflows/next-dev-version.yml
+++ b/.github/workflows/next-dev-version.yml
@@ -34,7 +34,7 @@ jobs:
 
     # zoo extract and ensure
     - name: Extract Zoo Context Properties
-      uses: jvalkeal/build-zoo-handler@gh13-work1
+      uses: jvalkeal/build-zoo-handler@main
       with:
         dispatch-handler-extract-context-properties: true
         ensure-env: |
@@ -56,14 +56,14 @@ jobs:
 
     # zoo commit
     - name: Commit Next Dev Changes
-      uses: jvalkeal/build-zoo-handler@gh13-work1
+      uses: jvalkeal/build-zoo-handler@main
       with:
         commit-changes-branch: master
         commit-changes-message: Next development version
 
     # zoo success
     - name: Notify Build Success Zoo Handler Controller
-      uses: jvalkeal/build-zoo-handler@gh13-work1
+      uses: jvalkeal/build-zoo-handler@main
       with:
         dispatch-handler-token: ${{ secrets.REPO_ACCESS_TOKEN }}
         dispatch-handler-owner: jvalkeal
@@ -77,7 +77,7 @@ jobs:
     # zoo failure
     - name: Notify Build Failure Zoo Handler Controller
       if: ${{ failure() }}
-      uses: jvalkeal/build-zoo-handler@gh13-work1
+      uses: jvalkeal/build-zoo-handler@main
       with:
         dispatch-handler-token: ${{ secrets.REPO_ACCESS_TOKEN }}
         dispatch-handler-owner: jvalkeal
