--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,11 @@ jobs:
           BUILD_ZOO_HANDLER_atest4_version
 
     # build
+    - name: Echo
+      run: |
+        echo x${BUILD_ZOO_HANDLER_prop1}x
+
+    # build
     - name: Build and Publish
       id: build
       run: |
