--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,8 @@ jobs:
     # build
     - name: Echo
       run: |
-        echo x${BUILD_ZOO_HANDLER_prop1}x
+        echo BUILD_ZOO_HANDLER_atest3_version_postfix ${BUILD_ZOO_HANDLER_atest3_version_postfix}
+        echo BUILD_ZOO_HANDLER_atest_version_postfix ${BUILD_ZOO_HANDLER_atest_version_postfix}
 
     # build
     - name: Build and Publish
@@ -54,7 +55,7 @@ jobs:
       run: |
         jfrog rt mvn build-helper:parse-version versions:set \
           -DprocessAllModules=false -DgenerateBackupPoms=false \
-          -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}'
+          -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}'${BUILD_ZOO_HANDLER_atest3_version_postfix-${BUILD_ZOO_HANDLER_atest_version_postfix}}
         jfrog rt mvn versions:set-property \
           -DgenerateBackupPoms=false -Dproperty=demo4.version -DnewVersion=$BUILD_ZOO_HANDLER_atest4_version
         jfrog rt mvn -U -B clean install
