--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
 
     # zoo extract and ensure
     - name: Extract Zoo Context Properties
-      uses: jvalkeal/build-zoo-handler@gh19
+      uses: jvalkeal/build-zoo-handler@v0.0.4
       with:
         dispatch-handler-extract-context-properties: true
         ensure-env: |
@@ -63,7 +63,7 @@ jobs:
 
     # zoo tag
     - name: Tag Release
-      uses: jvalkeal/build-zoo-handler@gh19
+      uses: jvalkeal/build-zoo-handler@v0.0.4
       with:
         tag-release-branch: ${{ env.BUILD_ZOO_HANDLER_atest3_version }}
         tag-release-tag: ${{ env.BUILD_ZOO_HANDLER_atest3_version }}
@@ -71,7 +71,7 @@ jobs:
 
     # zoo success
     - name: Notify Build Success Zoo Handler Controller
-      uses: jvalkeal/build-zoo-handler@gh19
+      uses: jvalkeal/build-zoo-handler@v0.0.4
       with:
         dispatch-handler-token: ${{ secrets.REPO_ACCESS_TOKEN }}
         dispatch-handler-client-payload-data: >
@@ -82,7 +82,7 @@ jobs:
     # zoo failure
     - name: Notify Build Failure Zoo Handler Controller
       if: ${{ failure() }}
-      uses: jvalkeal/build-zoo-handler@gh19
+      uses: jvalkeal/build-zoo-handler@v0.0.4
       with:
         dispatch-handler-token: ${{ secrets.REPO_ACCESS_TOKEN }}
         dispatch-handler-client-payload-data: >
