--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,7 @@ jobs:
         jfrog rt mvn versions:set-property \
           -DgenerateBackupPoms=false -Dproperty=demo4.version -DnewVersion=$BUILD_ZOO_HANDLER_atest4_version
         jfrog rt mvn -U -B clean install
+        jfrog rt build-publish
         echo BUILD_ZOO_HANDLER_atest3_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout) >> $GITHUB_ENV
 
     # zoo tag
