--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,7 @@ jobs:
           -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}'${BUILD_ZOO_HANDLER_atest3_version_postfix-${BUILD_ZOO_HANDLER_atest_version_postfix}}
         jfrog rt mvn versions:set-property \
           -DgenerateBackupPoms=false -Dproperty=demo4.version -DnewVersion=$BUILD_ZOO_HANDLER_atest4_version
+        jfrog rt build-clean
         jfrog rt mvn -U -B clean install
         jfrog rt build-publish
         echo BUILD_ZOO_HANDLER_atest3_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout) >> $GITHUB_ENV
